# The-game

./: CMakeLists.txt  juego.cpp  juego.h  jugador.cpp  jugador.h  main.cpp
.github/workflows/: CMakeCache.txt  build.ninja  cmake_install.cmake
